istio-redhat-helloworld-msa-all.yaml
##################################################################################################
#  aloha
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: "aloha"
  labels:
    app: "aloha"
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: "aloha"
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: aloha
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        alpha.istio.io/sidecar: injected
        alpha.istio.io/version: jenkins@ubuntu-16-04-build-12ac793f80be71-0.1.6-dab2033
        pod.beta.kubernetes.io/init-containers: '[{"args":["-p","15001","-u","1337"],"image":"docker.io/istio/init:0.1","imagePullPolicy":"Always","name":"init","securityContext":{"capabilities":{"add":["NET_ADMIN"]}}},{"args":["-c","sysctl
          -w kernel.core_pattern=/tmp/core.%e.%p.%t \u0026\u0026 ulimit -c unlimited"],"command":["/bin/sh"],"image":"alpine","imagePullPolicy":"Always","name":"enable-core-dump","securityContext":{"privileged":true}}]'
      creationTimestamp: null
      labels:
        app: aloha
        version: 0.0.2
    spec:
      containers:
      - env:
        - name: JAVA_OPTIONS
          value: -Xmx256m
        - name: AB_OFF
        image: aloha:0.0.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        name: vertx
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        resources: {}
      - args:
        - proxy
        - sidecar
        - -v
        - "2"
        - --passthrough
        - "8080"
        image: docker.io/istio/proxy_debug:0.1
        imagePullPolicy: Always
        name: proxy
        resources: {}
        securityContext:
          runAsUser: 1337
status: {}
---
##################################################################################################
#  api-gateway
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: "api-gateway"
  labels:
    app: "api-gateway"
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: "api-gateway"
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: api-gateway
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        alpha.istio.io/sidecar: injected
        alpha.istio.io/version: jenkins@ubuntu-16-04-build-12ac793f80be71-0.1.6-dab2033
        pod.beta.kubernetes.io/init-containers: '[{"args":["-p","15001","-u","1337"],"image":"docker.io/istio/init:0.1","imagePullPolicy":"Always","name":"init","securityContext":{"capabilities":{"add":["NET_ADMIN"]}}},{"args":["-c","sysctl
          -w kernel.core_pattern=/tmp/core.%e.%p.%t \u0026\u0026 ulimit -c unlimited"],"command":["/bin/sh"],"image":"alpine","imagePullPolicy":"Always","name":"enable-core-dump","securityContext":{"privileged":true}}]'
      creationTimestamp: null
      labels:
        app: api-gateway
        version: 0.0.2
    spec:
      containers:
      - env:
        - name: JAVA_OPTIONS
          value: -Xmx256m
        - name: AB_OFF
        image: api-gateway:0.0.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        name: spring-boot
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        resources: {}
      - args:
        - proxy
        - sidecar
        - -v
        - "2"
        - --passthrough
        - "8080"
        image: docker.io/istio/proxy_debug:0.1
        imagePullPolicy: Always
        name: proxy
        resources: {}
        securityContext:
          runAsUser: 1337
status: {}
---
##################################################################################################
#  bonjour
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: bonjour
  labels:
    app: bonjour
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: bonjour
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bonjour
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bonjour
        version: 0.0.2
    spec:
      containers:
      - name:  nodejs
        image: bonjour:0.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
##################################################################################################
#  hola
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: "hola"
  labels:
    app: "hola"
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: "hola"
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: hola
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        alpha.istio.io/sidecar: injected
        alpha.istio.io/version: jenkins@ubuntu-16-04-build-12ac793f80be71-0.1.6-dab2033
        pod.beta.kubernetes.io/init-containers: '[{"args":["-p","15001","-u","1337"],"image":"docker.io/istio/init:0.1","imagePullPolicy":"Always","name":"init","securityContext":{"capabilities":{"add":["NET_ADMIN"]}}},{"args":["-c","sysctl
          -w kernel.core_pattern=/tmp/core.%e.%p.%t \u0026\u0026 ulimit -c unlimited"],"command":["/bin/sh"],"image":"alpine","imagePullPolicy":"Always","name":"enable-core-dump","securityContext":{"privileged":true}}]'
      creationTimestamp: null
      labels:
        app: hola
        version: 0.0.2
    spec:
      containers:
      - env:
        - name: JAVA_OPTIONS
          value: -Xmx256m
        - name: AB_OFF
        image: hola:0.0.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        name: wildfly
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        resources: {}
      - args:
        - proxy
        - sidecar
        - -v
        - "2"
        - --passthrough
        - "8080"
        image: docker.io/istio/proxy_debug:0.1
        imagePullPolicy: Always
        name: proxy
        resources: {}
        securityContext:
          runAsUser: 1337
status: {}
---
##################################################################################################
#  ola
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: "ola"
  labels:
    app: "ola"
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: "ola"
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: ola
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        alpha.istio.io/sidecar: injected
        alpha.istio.io/version: jenkins@ubuntu-16-04-build-12ac793f80be71-0.1.6-dab2033
        pod.beta.kubernetes.io/init-containers: '[{"args":["-p","15001","-u","1337"],"image":"docker.io/istio/init:0.1","imagePullPolicy":"Always","name":"init","securityContext":{"capabilities":{"add":["NET_ADMIN"]}}},{"args":["-c","sysctl
          -w kernel.core_pattern=/tmp/core.%e.%p.%t \u0026\u0026 ulimit -c unlimited"],"command":["/bin/sh"],"image":"alpine","imagePullPolicy":"Always","name":"enable-core-dump","securityContext":{"privileged":true}}]'
      creationTimestamp: null
      labels:
        app: ola
        version: 0.0.2
    spec:
      containers:
      - env:
        - name: JAVA_OPTIONS
          value: -Xmx64m -Xss128m
        - name: AB_OFF
        image: ola:0.0.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        name: spring-boot
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        resources: {}
      - args:
        - proxy
        - sidecar
        - -v
        - "2"
        - --passthrough
        - "8080"
        image: docker.io/istio/proxy_debug:0.1
        imagePullPolicy: Always
        name: proxy
        resources: {}
        securityContext:
          runAsUser: 1337
status: {}
---
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redhat-helloworld-msa
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /api/gateway
        backend:
          serviceName: api-gateway
          servicePort: 8080
      - path: /api/bonjour
        backend:
          serviceName: bonjour
          servicePort: 8080
      - path: /api/bonjour-chaining
        backend:
          serviceName: bonjour
          servicePort: 8080
      - path: /api/aloha
        backend:
          serviceName: aloha
          servicePort: 8080
      - path: /api/aloha-chaining
        backend:
          serviceName: aloha
          servicePort: 8080
      - path: /api/ola
        backend:
          serviceName: ola
          servicePort: 8080
      - path: /api/ola-chaining
        backend:
          serviceName: ola
          servicePort: 8080
      - path: /api/ola-long
        backend:
          serviceName: ola
          servicePort: 8080
      - path: /api/hola
        backend:
          serviceName: hola
          servicePort: 8080
      - path: /api/hola-chaining
        backend:
          serviceName: hola
          servicePort: 8080
