redhat-helloworld-msa-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redhat-helloworld-msa
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /api/gateway
        backend:
          serviceName: istio-api-gateway
          servicePort: 8080  
      - path: /api/bonjour
        backend:
          serviceName: istio-bonjour
          servicePort: 8080
      - path: /api/bonjour-chaining
        backend:
          serviceName: istio-bonjour
          servicePort: 8080
      - path: /api/aloha
        backend:
          serviceName: istio-aloha
          servicePort: 8080
      - path: /api/aloha-chaining
        backend:
          serviceName: istio-aloha
          servicePort: 8080
      - path: /api/ola
        backend:
          serviceName: istio-ola
          servicePort: 8080
      - path: /api/ola-chaining
        backend:
          serviceName: istio-ola
          servicePort: 8080
      - path: /api/hola
        backend:
          serviceName: istio-hola
          servicePort: 8080
      - path: /api/hola-chaining
        backend:
          serviceName: istio-hola
          servicePort: 8080
